[gd_scene load_steps=9 format=3 uid="uid://deyqfiqqlobte"]

[ext_resource type="Script" path="res://Cards/base_card.gd" id="1_e7lnp"]
[ext_resource type="FontFile" uid="uid://bt13mfbf7jiat" path="res://Assets/Fonts/Gugi-Regular.ttf" id="2_r1scp"]
[ext_resource type="Texture2D" uid="uid://4xpe5xrkq8vd" path="res://Assets/witch.png" id="3_5s86w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q51jr"]
bg_color = Color(0, 0.404822, 0.89, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.786167, 0.89, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_h8cgu"]
font = ExtResource("2_r1scp")
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y0h1l"]
font = ExtResource("2_r1scp")
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6huw"]
bg_color = Color(0, 0.786167, 0.89, 1)

[sub_resource type="LabelSettings" id="LabelSettings_35c5j"]
font = ExtResource("2_r1scp")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="BaseCard" type="Button" node_paths=PackedStringArray("name_label", "friend_sprite", "description_label", "cost_label")]
custom_minimum_size = Vector2(200, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -45.0
offset_right = 75.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
keep_pressed_outside = true
script = ExtResource("1_e7lnp")
name_label = NodePath("CardContainer/MarginContainer/VBoxContainer/NameLabel")
friend_sprite = NodePath("CardContainer/MarginContainer/VBoxContainer/Picture Frame/FriendSprite")
description_label = NodePath("CardContainer/MarginContainer/VBoxContainer/Control/DescriptionLabel")
cost_label = NodePath("Cost Panel/CostLabel")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q51jr")

[node name="CardContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(168, 302)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CardContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="CardContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "This is a label"
label_settings = SubResource("LabelSettings_h8cgu")
horizontal_alignment = 1

[node name="Picture Frame" type="Control" parent="CardContainer/MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 145)
layout_mode = 2

[node name="FriendSprite" type="TextureRect" parent="CardContainer/MarginContainer/VBoxContainer/Picture Frame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_right = -0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5s86w")
stretch_mode = 5

[node name="Control" type="Control" parent="CardContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="CardContainer/MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "This is a card description"
label_settings = SubResource("LabelSettings_y0h1l")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Cost Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = -167.0
offset_right = 104.0
offset_bottom = -127.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j6huw")

[node name="CostLabel" type="Label" parent="Cost Panel"]
layout_mode = 0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_35c5j")
horizontal_alignment = 1

[connection signal="button_up" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
